--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # Configuração do Banco de Dados
 DB_NAME=railway
 DB_USER=root
-DB_PASS=zeTXBOMFDVbNqlZtGUJBFiYfIEAsLuaf
-DB_HOST=tramway.proxy.rlwy.net
-DB_PORT=25139
+DB_PASS=AgULMYRcJDfyrmJxAcaejifmOffMWfzb
+DB_HOST=yamanote.proxy.rlwy.net
+DB_PORT=56422
 
 # Configuração do Servidor
 PORT=3000
