--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 DB_NAME=railway
 DB_USER=root
 DB_PASS=arTvpZkNoRuAFztvLqGkUvmdDBsYcVfC
-DB_HOST=yamanote.proxy.rlwy.net
+DB_HOST=yamanote.proxy.rlwy.net:
 DB_PORT=56422
 
 # Configuração do Servidor
