--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # Configuração do Banco de Dados
 DB_NAME=railway
 DB_USER=root
-DB_PASS=arTvpZkNoRuAFztvLqGkUvmdDBsYcVfC
-DB_HOST=yamanote.proxy.rlwy.net:
-DB_PORT=56422
+DB_PASS=mKOQCooXpYCjdeEfOmIzEJmGbVdQKaRm
+DB_HOST=shuttle.proxy.rlwy.net
+DB_PORT=44977
 
 # Configuração do Servidor
 PORT=3000
