--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # Configuração do Banco de Dados
 DB_NAME=railway
 DB_USER=root
-DB_PASS=mKOQCooXpYCjdeEfOmIzEJmGbVdQKaRm
-DB_HOST=shuttle.proxy.rlwy.net
-DB_PORT=44977
+DB_PASS=qaHkHYqcOKygJKkZuJPkHaTGdfLwmJfD
+DB_HOST=switchyard.proxy.rlwy.net
+DB_PORT=36169
 
 # Configuração do Servidor
 PORT=3000
