--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # Configuração do Banco de Dados
-DB_NAME=railway
-DB_USER=root
-DB_PASS=qaHkHYqcOKygJKkZuJPkHaTGdfLwmJfD
-DB_HOST=switchyard.proxy.rlwy.net
-DB_PORT=36169
+DB_NAME=
+DB_USER=
+DB_PASS=
+DB_HOST=
+DB_PORT=
 
 # Configuração do Servidor
 PORT=3000
