Atualizar o backup.yml

--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -25,15 +25,20 @@ jobs:
           BACKUP_FILE="backup_${DB_NAME}_${TIMESTAMP}.sql"
           echo "Realizando backup em $BACKUP_FILE"
           mysqldump -h "$DB_HOST" -P "$DB_PORT" -u "$DB_USER" --password="$DB_PASSWORD" "$DB_NAME" > "$BACKUP_FILE"
+          echo "BACKUP_FILE=$BACKUP_FILE" >> $GITHUB_ENV  # Salva o nome do arquivo no ambiente
 
       - name: Upload do backup como artifact no GitHub
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4  # Atualizando para v4
         with:
           name: backup-mysql
-          path: backup_${{ env.DB_NAME }}_*.sql
+          path: ${{ env.BACKUP_FILE }}  # Referenciando a variável correta
 
       - name: Enviar backup para Dropbox
         env:
           DROPBOX_ACCESS_TOKEN: ${{ secrets.DROPBOX_ACCESS_TOKEN }}
         run: |
-          TIMESTAMP=$(date
+          curl -X POST https://content.dropboxapi.com/2/files/upload \
+          --header "Authorization: Bearer $DROPBOX_ACCESS_TOKEN" \
+          --header "Dropbox-API-Arg: {\"path\": \"/${{ env.BACKUP_FILE }}\",\"mode\": \"overwrite\"}" \
+          --header "Content-Type: application/octet-stream" \
+          --data-binary @"${{ env.BACKUP_FILE }}"
