--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DATABASE_URL="mysql://root:jOfLiRdYPYVeKPlEZmBpruxSZNQdAvoU@trolley.proxy.rlwy.net:48892/railway"
 PORT=3000
+BASE_URL="https://projeto-fidelidade-production.up.railway.app"
