--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "cartao-padrao---copia",
+  "name": "cartao-fidelidade",
   "version": "1.0.0",
-  "description": "",
+  "description": "Sistema de cartão fidelidade usando Express + Prisma",
   "main": "server.js",
   "scripts": {
     "dev": "nodemon server.js",
