--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 DATABASE_URL="mysql://root:jOfLiRdYPYVeKPlEZmBpruxSZNQdAvoU@trolley.proxy.rlwy.net:48892/railway"
 PORT=3000
 BASE_URL="https://projeto-fidelidade-production.up.railway.app"
+JWT_SECRET=Voyageturbo13.
