--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,12 +7,12 @@
   "theme_color": "#ffffff",
   "icons": [
     {
-      "src": "/logo/logo.png",
+      "src": "/logo/Logo.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/logo/icon.png",
+      "src": "/logo/Logo.png",
       "sizes": "512x512",
       "type": "image/png"
     }
